# Learn_Modern_CMake

./: .clang-format  .gitignore  Allclean  Allmake  README.md  cmake notes.pptx  note.md
00_variables/: CMakeLists.txt  note.md
00_variables-scope/: CMakeLists.txt
01-hello_world/: Allmake  CMakeLists.txt  main.cpp
01_Basic/00_variables/: Allmake
01_Basic/0A_set-variables/: Allmake  CMakeLists.txt
01_Basic/0B_variables-scope/: CMakeLists.txt  note.md
01_Basic/0B_variables-scope/a_add_subdirectory/: CMakeLists.txt
01_Basic/0B_variables-scope/a_add_subdirectory/child/: CMakeLists.txt
01_Basic/0B_variables-scope/b_include/: Allmake  CMakeLists.txt
01_Basic/0B_variables-scope/b_include/child/: CMakeLists.txt
01_Basic/0B_variables-scope/c_function/: CMakeLists.txt
01_Basic/0B_variables-scope/d_macro/: CMakeLists.txt
01_Basic/0B_variables-scope/sub/: CMakeLists.txt
01_Basic/0C_dependencies-conflicting/: Allmake  CMakeLists.txt  README.md  lib1.cpp  lib1.hpp  main.cpp
01_hello-world/: CMakeLists.txt  main.cpp
01_hello-world copy/: Allmake  CMakeLists.txt
02_Building/: note.md
02_Building/02_include-header/: Allmake  CMakeLists.txt
02_Building/04_shared-library/: CMakeLists.txt
02_Building/04_shared-library/src/: main.cpp
02_Building/06_use-subdirectory/: CMakeLists.txt
02_Building/0A_hello-world/: CMakeLists.txt  README.md
02_Building/0B_include-header/: Allmake  CMakeLists.txt  READM.md
02_Building/0B_include-header/include/: message.hpp
02_Building/0C_static-libray/: Allmake  CMakeLists.txt  README.md
02_Building/0D_shared-library/: Allmake  CMakeLists.txt  README.md
02_Building/0D_shared-library/message/: message.cpp
02_Building/0E_use-subdirectory/: CMakeLists.txt
02_Building/0E_use-subdirectory/headerLibrary/: CMakeLists.txt
02_include-header/: Allmake  CMakeLists.txt  READM.md
03_Installing/: CMakeLists.txt  READM.md
03_static-libray/: Allmake  CMakeLists.txt  READM.md
03_static-libray/messageLib/: message.hpp
04-shared-library/: CMakeLists.txt  READM.md
04_Config-Package/mathLib/include/: math.hpp
04_Importing-Exporting-Targets/0A_Importing-Targets/: Allmake  CMakeLists.txt
04_Importing-Exporting-Targets/0B_Exporting-Targets/: Allmake  CMakeLists.txt
04_Importing-Exporting/0A_Importing-Targets/: CMakeLists.txt
04_Importing-Exporting/0B_Exporting-Targets/: CMakeLists.txt
04_Importing-Exporting/0B_Exporting-Targets/message/: CMakeLists.txt
04_Importing-Exporting/0C_Double-Exporting-Targets/: Allmake  CMakeLists.txt
04_Importing-Exporting/0C_Double-Exporting-Targets/message/: CMakeLists.txt  Config.cmake.in
04_Importing-Exporting/0C_Double-Exporting-Targets/message/basic/: CMakeLists.txt  basic.hpp
04_Importing-Exporting/0C_Double-Exporting-Targets/src/: main.cpp
04_Importing-Exporting/mathLib/: CMakeLists.txt
04_Importing-Exporting/mathLib/src/: math.cpp
04_Importing-Exporting/useMathLib/: CMakeLists.txt
04_shared-library/: Allmake
05_Config-Package/0A_Creating-Config-Package/: README.md
05_Config-Package/0A_Creating-Config-Package/useMathLib/src/: main.cpp
05_Config-Package/0B_Adding-Components/: Allmake  README.md
05_Config-Package/0B_Adding-Components/mathLib/: CMakeLists.txt
05_Config-Package/0B_Adding-Components/mathLib/add/: add.cpp  add.hpp
05_Config-Package/0B_Adding-Components/mathLib/cmake/: Config.cmake.in
05_Config-Package/0B_Adding-Components/mathLib/multiply/: multiply.cpp  multiply.hpp
05_Config-Package/0B_Adding-Components/useMathLib/: CMakeLists.txt
05_Config-Package/0B_Adding-Components/useMathLib/src/: main.cpp
05_Config-Package/0C_Double-Config-Packages/message/basic/: Config.cmake.in
05_Config-Package/0C_Double-Config-Packages/message/src/: message.cpp
05_Config-Package/0D_Find_Package-Order/: CMakeLists.txt  README.md
05_Config-Package/mathLib/cmake/: Config.cmake.in
05_installing/: Allmake  CMakeLists.txt  example.conf
05_use-CTest/: Allmake  CMakeLists.txt  README.md
05_use-CTest/src/: main.cpp
05_use-CTest/test/: CMakeLists.txt  test.cpp
05_use-CTest/tests/: CMakeLists.txt
06_Use-CTest/: README.md
06_Use-CTest/tests/src/: sqrTest.cpp
06_use-subdirectory/: Allmake
06_use-subdirectory/headerLibrary/: CMakeLists.txt
06_use-subdirectory/myApp/: CMakeLists.txt  main.cpp
06_use-subdirectory/staticLibrary/: CMakeLists.txt
06_use-subdirectory/staticLibrary/src/: sublib1.cpp
07_Config-Package/: Allmake
07_Config-Package/mathLib/: CMakeLists.txt
07_Parse-Argument/: Allmake  CMakeLists.txt  note.md
07_Use-CTest/: Allmake
07_Use-CTest/include/: sqr.hpp
07_cmake-package/: Allmake
07_cmake-package/mathLib/: CMakeLists.txt
07_cmake-package/useMathLib/: CMakeLists.txt
07_exporting-project/: Allmake  CMakeLists.txt
07_exporting-project/cmake/: Config.cmake.in
07_exporting-project/mathLib/: mathLib.cpp
08_Unset-Properties/: CMakeLists.txt
08_importing-project/: Allmake  CMakeLists.txt
0B_static-libray-clang/: CMakeLists.txt  READM.md
0B_static-libray-clang/messageLib/: message.hpp
Experimental/0A_hello-world-clang/: CMakeLists.txt  READM.md  _Allmake
Experimental/0B_static-libray-clang/: CMakeLists.txt  _Allmake
find_package-order/: README.md
