cmake_minimum_required(VERSION 3.15.0)

project(hello-world LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")

message(STATUS "This is BINARY DIR " ${PROJECT_BINARY_DIR})
message(STATUS "This is SOURCE DIR " ${PROJECT_SOURCE_DIR})

set(SOURCE_FILE ${PROJECT_SOURCE_DIR}/src/main.cpp)

add_executable(${CMAKE_PROJECT_NAME} ${SOURCE_FILE})